5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1888_3134.log
== TEST (2019-07-09 16:20:35) 
-- CODE:
from numpy import* 


x array(eval(inpyt("")))


m=0**2
for i in range(x):
	m+=(x[i])**2
	
print(m)
	
-- ERROR:
File "XXXX", line 4
    x array(eval(inpyt("")))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:39) 
-- CODE:
from numpy import* 


x= array(eval(inpyt("")))


m=0**2
for i in range(x):
	m+=(x[i])**2
	
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:48) 
-- CODE:
from numpy import* 


x= array(eval(input("")))


m=0**2
for i in range(x):
	m+=(x[i])**2
	
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:23) 
-- CODE:
from numpy import* 


x= array(eval(input("")))


m=0**2
for i in range(x):
	m+=x[i]**2
	
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
